# Algorithms-and-Datastructures-Hand-in-1

./: CMakeLists.txt  README.md  main  main.cpp
Exercise-1/: CMakeLists.txt
Exercise-1/src/: Exercise-1.cpp
Exercise-2/: CMakeLists.txt
Exercise-2/src/: Exercise-2  Exercise-2.cpp
Exercise-3/: CMakeLists.txt
Exercise-3/src/: Exercise-3.cpp
Exercise-4/: CMakeLists.txt
Exercise-4/src/: Exercise-4.cpp
include/: Exercise-1.hpp  Exercise-2.hpp  Exercise-3.hpp  Exercise-4.hpp
tests/src/: tests.cpp
